--- a/tv.html
+++ b/tv.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Video.js | HTML5 Video Player</title>
+  <title>TV</title>
   <link href="video-js.css" rel="stylesheet" type="text/css">
   <script src="video.js"></script>
   <script>
@@ -22,17 +22,18 @@
 
 <script type="text/javascript">
 
- videojs("example_video_1").ready(function(){
-      var myPlayer = this;
-      myPlayer.on('timeupdate', function () {
-        if (myPlayer.currentTime() >= 3) {
+ myPlayer = videojs("example_video_1");
+
+ myFunc = function() {
+      if (myPlayer.currentTime() >= 3) {
             myPlayer.pause();
             //send an alert to the demo2.html page 
             //alert("fired event in another page!");
-        }
-      })
-    });
-
+          }
+    };
+    
+myPlayer.on('timeupdate', myFunc);
+      
 
 </script>
 </body>
