removed more cruft and images to shrink heroku slug size

--- a/public/index.html
+++ b/public/index.html
@@ -44,12 +44,12 @@
                <div class="navbar">
                   <div class="navbar-inner">
                      <div class="container">
-                        <a class="brand" href="landing.html">CineMode</a>
+                        <a class="brand" href="index.html">CineMode</a>
                         <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </a>
                         <div class="nav-collapse">
                            <ul class="nav">
                               <li class="active">
-                                 <a href="landing.html">Home</a>
+                                 <a href="index.html">Home</a>
                                  <ul>
  
                                  </ul>
@@ -254,7 +254,7 @@
                      <!-- footer main nav -->
                      <nav>
                         <ul>
-                           <li><a href="landing.html">Home</a></li>
+                           <li><a href="index.html">Home</a></li>
                            <!-- <li><a href="edgecorp/edgecorp-home-fullslide_files/about.html">About</a></li> -->
                            <li><a href="cinemode-gallery.html">Gallery</a></li>
                            <!-- <li><a href="edgecorp/edgecorp-home-fullslide_files/blog.html">Blog</a></li> -->
@@ -263,7 +263,7 @@
                      </nav>
                   </div>
                   <div class="span4">
-                     <small>Copyright © <a href="landing.html">CineMode</a> 2013</small>
+                     <small>Copyright © <a href="index.html">CineMode</a> 2013</small>
                   </div>
                </div>
             </footer>
