Removed bogus social links from index.html

--- a/public/cinemode-gallery.html
+++ b/public/cinemode-gallery.html
@@ -69,12 +69,12 @@
                            </ul>
                            <!-- social navigation area -->
                            <ul class="nav pull-right">
-                              <li><a href="edgecorp/edgecorp-home-fullslide_files/portfolio.html#" rel="tooltip" data-placement="bottom" data-original-title="Facebook"><span class="icomoon-facebook"></span></a></li>
-                              <li><a href="edgecorp/edgecorp-home-fullslide_files/portfolio.html#" rel="tooltip" data-placement="bottom" data-original-title="Twitter"><span class="icomoon-twitter"></span></a></li>
-                              <li><a href="edgecorp/edgecorp-home-fullslide_files/portfolio.html#" rel="tooltip" data-placement="bottom" data-original-title="Google +"><span class="icomoon-google-plus"></span></a></li>
-                              <li><a href="edgecorp/edgecorp-home-fullslide_files/portfolio.html#" rel="tooltip" data-placement="bottom" data-original-title="Vimeo"><span class="icomoon-vimeo"></span></a></li>
-                              <li><a href="edgecorp/edgecorp-home-fullslide_files/portfolio.html#" rel="tooltip" data-placement="bottom" data-original-title="Flickr"><span class="icomoon-flickr"></span></a></li>
-                              <li><a href="edgecorp/edgecorp-home-fullslide_files/portfolio.html#" rel="tooltip" data-placement="bottom" data-original-title="Feed"><span class="icomoon-feed"></span></a></li>
+                              <li><a href="#" rel="tooltip" data-placement="bottom" data-original-title="Facebook"><span class="icomoon-facebook"></span></a></li>
+                              <li><a href="#" rel="tooltip" data-placement="bottom" data-original-title="Twitter"><span class="icomoon-twitter"></span></a></li>
+                              <li><a href="#" rel="tooltip" data-placement="bottom" data-original-title="Google +"><span class="icomoon-google-plus"></span></a></li>
+                              <li><a href="#" rel="tooltip" data-placement="bottom" data-original-title="Vimeo"><span class="icomoon-vimeo"></span></a></li>
+                              <li><a href="#" rel="tooltip" data-placement="bottom" data-original-title="Flickr"><span class="icomoon-flickr"></span></a></li>
+                              <li><a href="#" rel="tooltip" data-placement="bottom" data-original-title="Feed"><span class="icomoon-feed"></span></a></li>
  <!--                              <li><a href="edgecorp/edgecorp-home-fullslide_files/portfolio.html#" rel="tooltip" data-placement="bottom" data-original-title="Dribble"><span class="icomoon-dribbble"></span></a></li> -->
                            </ul>
                         </div>
