Changed front copy and added logo to banners

--- a/public/index.html
+++ b/public/index.html
@@ -83,25 +83,25 @@
                <div class="item active">
                   <img src="edgecorp/edgecorp-home-fullslide_files/1200x400_sl_4.jpg" alt="">
                   <div class="carousel-caption">
-                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                     <p>CINEMODE is a video commerce distribution platform that helps fashion brands reach larger customer audiences, and entertainment organizations to monetize their content.</p>
                   </div>
                </div>
                <div class="item">
                   <img src="edgecorp/edgecorp-home-fullslide_files/1200x400_sl_3.jpg" alt="">
                   <div class="carousel-caption">
-                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                     <p>A synergy of content, culture and commerce, we believe that organizations built around the convergence of technology, design, and culture can make a significant contribution to society.</p>
                   </div>
                </div>
                <div class="item">
                   <img src="edgecorp/edgecorp-home-fullslide_files/1200x400_sl_2.jpg" alt="">
                   <div class="carousel-caption">
-                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                     <p>By uniting people through resonant mobile, tablet, and smart TV experiences; we aspire to be the leading online distribution and monetization solution for the fashion and entertainment industry. </p>
                   </div>
                </div>
                <div class="item">
                   <img src="edgecorp/edgecorp-home-fullslide_files/1200x400_sl_1.jpg" alt="">
                   <div class="carousel-caption">
-                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                     <p>Creating a cinematheque of global style and culture, while providing modern consumers with the world’s most entertaining shopping destination.</p>
                   </div>
                </div>
             </div>
@@ -114,8 +114,8 @@
          <section class="main">
             <div class="row">
                <div class="span5">
-                  <h2>Welcome</h2>
-                  <p><big> Nunc ut risus justo. Duis tincidunt leo a nibh venenatis dignissim.Vivamus ut tortor nec elit vestibulum porta. Aenean scelerisque tincidunt lorem, ac aliquet metus malesuada non. Fusce tempus augue erat. Phasellus cursus lobortis sem, sed consectetur mi ultricies ut. Vestibulum faucibus ornare aliquet. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus volutpat eros nec dolor pulvinar aliquet ut quis turpis. Aenean vitae nibh purus, in consectetur erat. Etiam semper elementum mauris, et cursus nibh l</big></p>
+                  <h2>Our Vision</h2>
+                  <p> To become the world’s de-facto, cross-platform, e-commerce experience; by providing the most seamless integration of content and commerce. We've created an “Experience Engine” that transforms the fashion and entertainment industries and provides consumers with a new way to both be entertained and discover new products and brands. An experience so powerful, that the terms "interactive video", and "shoppable video" become replaced with the our name. . . CINEMODE.</p>
                   <br>
                   <h2>Want More?</h2>
                   <p><big>Aliquam erat volutpat. Proin a lobortis sem. Aenean odio massa, vehicula ut tincidunt vel, laoreet sed erat. Fusce commodo, dui sed pharetra venenatis, lectus lorem bibendum nunc, in sollicitudin urna nisi ut libero. Fusce venenatis scelerisque condimentum. Quisque rutrum augue ut elit volutpat eget cursus ante dictum. Donec vulputate viverra augue, non volutpat felis ultrices bibendum.Phasellus sodales dui in leo aliquam blandit. Pellentesque diam sapien, fermentum nec commodo faucibus, vestibu</big></p>
